--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,9 @@
 body {
   font-family: "Roboto", sans-serif;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 @layer utilities {
   .text-balance {
@@ -80,4 +83,33 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.ql-editor {
+  line-height: 22px !important;
+  padding: 8px 12px !important;
+  color: #1d1c1d !important;
+  font-weight: 400 !important;
+  font-family: "Lato", sans-serif !important ;
+  font-size: 14px !important;
+}
+.ql-editor a {
+  color: #1264a3 !important;
+}
+
+.ql-editor a:hover {
+  text-decoration: underline !important;
+}
+
+.ql-renderer {
+  padding: 0 !important;
+}
+
+.ql-editor:before {
+  left: 12px !important;
+  color: #8d8d8d !important;
+  font-style: normal !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  @apply truncate;
 }
