--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
 }
 
 body {
+  background-color: #f4f2ee;
   font-family: "Roboto", sans-serif;
 }
 html {
@@ -113,4 +114,3 @@ html {
   font-weight: 400 !important;
   @apply truncate;
 }
-
